@@ -1,6 +1,11 @@
 Changes go downward, months go upward.  Please scroll to the bottom for a legend.
 Changelog started January 1, 2004; Currently at $Revision$.
 
+January 2012
+--------------------------------------------------------------------------------
+ ! Directory listing and editing of arbitrary files from the theme editing page in the admin panel
+
+
 SMF 2.0.3                                                      November 16 2012
 ===============================================================================
 
